--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-fastapi
-uvicorn
-fastmcp
+fastapi==0.109.0
+uvicorn[standard]==0.27.0
+requests==2.31.0
+python-dotenv==1.0.0
+fastmcp==0.2.0
+pydantic==2.5.3
