--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.0
-requests==2.31.0
-python-dotenv==1.0.1
-fastmcp==0.2.0
-pydantic==2.9.0
+fastapi
+uvicorn[standard]
+requests
+python-dotenv
+fastmcp
+pydantic
+pydantic-core
